# Computational-Astrophysics

./: README.md  WASP_62b_model.yaml  WASP_96b_retrieval_params.yaml  WASP_96b_transit_params.yaml  notebook_NN.ipynb  notebook_SVM.ipynb  pyproject.toml
assignment2/: notebook_NN.ipynb  notebook_SVM.ipynb  transitB.py
assignment3/: Assignment3_A.ipynb  Assignment3_B.ipynb  WASP-62b-fit.csv  WASP-96b-fit.csv  WASP-96b_Awesome-SOSS:-atmospheric-characterization-of-WASP-96-b-using-the-JWST-early-release-observations_report_assignment3_taskB.txt  WASP-96b_report_assignment3_taskB.txt  WASP_62b_assignment3_taskA_parameters.txt  assignment3_taskC.txt  assignment3_taskD.txt  retrieval_WASP-62b.ipynb  retrieval_WASP-96b.ipynb  traces_WASP-62b.npy
daneel_package/: README.md  pyproject.toml
daneel_package/src/daneel/: __main__.py
daneel_package/src/daneel/atmosphere/: model.py  retrieval.py
daneel_package/src/daneel/detection/: transit.py
packaging_example/: pyproject.toml
packaging_example/src/example_package/: __main__.py  sin_plot.py
