[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy", "matplotlib"]


classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.scripts]
example_package = "example_package.__main__:main"